fixing vertical alignment of footer logos

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -7,6 +7,16 @@
   border-top: $princeton-orange 8px solid;
   margin-top: 2em;
 
+  .col-2 {
+    margin: auto;
+  }
+  .col-3 {
+    margin: auto;
+  }
+  .col-8 {
+    margin: auto;
+  }
+
   .logos {
     text-align: center;
     padding: 60px 0px;
